--- a/FM633A/lab05.html
+++ b/FM633A/lab05.html
@@ -1,6 +1,6 @@
 <head>
     <title>
-        LAB04 心情日記
+        LAB05 心情分享氣氛燈
     </title>
 <style>
     html,
@@ -13,7 +13,7 @@
     }
     h1{
         text-align: center;
-        color: rgb(66, 0, 68);
+        color: rgb(0, 41, 68);
     }
     #startBtn{
         background-color: rgb(128, 128, 128); 
@@ -178,7 +178,7 @@
 <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
 <body>
 <!-- <div class="left"> -->
-<h1>LAB04 心情日記</h1>
+<h1>LAB05 心情分享氣氛燈</h1>
 
 <div class="div-relative" style="margin: auto;width: 90%;">
 <div class="msgbox" id="msgbox">
